--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -30,14 +30,21 @@
 }
 
 .error_image {
-  width: 777px;
+  width: 70%;
+  right: 3%;
   position: absolute;
-  left: 501px;
-  bottom: 16px;
+  top: 20%;
+  height: auto;
+  min-height: 30%;
+  max-height: 89%;
 }
 
 .error_h3 {
   font-size: 40px;
-  margin-left: 185px;
-  margin-top: 163px;
+  margin-left: 12%;
+  margin-top: 12%;
+}
+
+.error-content {
+  display: inline-block;
 }
