--- a/src/Pages/Start/start.css
+++ b/src/Pages/Start/start.css
@@ -1,233 +1,250 @@
-a{
-    text-decoration: none;
+a {
+  text-decoration: none;
 }
 
- #player{
-    /* z-index: 2;
+.contenido {
+  width: 100vw;
+  height: 100vh;
+  justify-content: center;
+  display: flex;
+}
+
+#player {
+  /* z-index: 2;
     position: fixed; */
-     display: none; 
-} 
-
-.main{
-    width: 100%;
-    height: 100vh;
+  display: none;
 }
 
-.video{
-    z-index: -1;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: fixed;
-       right: 0;
-          bottom: 0;
-   min-width: 100%;  
-    min-height: 100%;
+.main {
+  width: 100%;
+  height: 100vh;
 }
 
-.start{
-   z-index: 2;
-    margin-top: 25%;
-    position: absolute;
-   width: 55%;
-   top: 0;
+.video {
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
-.sound{
-    z-index: 2;
-    margin-top: 25%;
-    position: absolute;
-   width: 55%;
-   top: 0;
+.start {
+  z-index: 2;
+  top: 50%;
+  position: absolute;
+}
+
+.sound {
+  z-index: 2;
+  margin-top: 25%;
+  position: absolute;
+  width: 55%;
+  top: 0;
 }
 
 .fancy {
-    margin-right: 45%;
-    background-color: transparent;
-    border: 2px solid #000;
-    border-radius: 0;
-    box-sizing: border-box;
-    color: #fff;
-    cursor: pointer;
-    display: inline-block;
-    float: right;
-    font-weight: 700;
-    letter-spacing: 0.05em;
-    margin: 0;
-    outline: none;
-    overflow: visible;
-    padding: 1.25em 2em;
-    position: relative;
-    
-    text-decoration: none;
-    text-transform: none;
-    transition: all 0.3s ease-in-out;
-    user-select: none;
-    font-size: 13px;
-   }
-   
-   .fancy::before {
-    content: " ";
-    width: 1.5625rem;
-    height: 2px;
-    background: black;
-    top: 50%;
-    left: 1.5em;
-    position: absolute;
-    transform: translateY(-50%);
-    transform-origin: center;
-    transition: background 0.3s linear, width 0.3s linear;
-   }
-   
-   .fancy .text {
-    font-size: 1.125em;
-    line-height: 1.33333em;
-    padding-left: 2em;
-    display: block;
-    text-align: left;
-    transition: all 0.3s ease-in-out;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: black;
-   }
-   
-   .fancy .top-key {
-    height: 2px;
-    width: 1.5625rem;
-    top: -2px;
-    left: 0.625rem;
-    position: absolute;
-    background: #e8e8e8;
-    transition: width 0.5s ease-out, left 0.3s ease-out;
-   }
-   
-   .fancy .bottom-key-1 {
-    height: 2px;
-    width: 1.5625rem;
-    right: 1.875rem;
-    bottom: -2px;
-    position: absolute;
-    background: #e8e8e8;
-    transition: width 0.5s ease-out, right 0.3s ease-out;
-   }
-   
-   .fancy .bottom-key-2 {
-    height: 2px;
-    width: 0.625rem;
-    right: 0.625rem;
-    bottom: -2px;
-    position: absolute;
-    background: #e8e8e8;
-    transition: width 0.5s ease-out, right 0.3s ease-out;
-   }
-   
-   .fancy:hover {
-    color: white;
-    background: black;
-   }
-   
-   .fancy:hover::before {
-    width: 0.9375rem;
-    background: white;
-   }
-   
-   .fancy:hover .text {
-    color: #630ec5;
-    padding-left: 1.5em;
-   }
-   
-   .fancy:hover .top-key {
-    left: -2px;
-    width: 0px;
-   }
-   
-   .fancy:hover .bottom-key-1,
-    .fancy:hover .bottom-key-2 {
-    right: 0;
-    width: 0;
-   }
+  margin-right: 45%;
+  background-color: transparent;
+  border: 2px solid #000;
+  border-radius: 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  margin: 0;
+  outline: none;
+  overflow: visible;
+  padding: 1.25em 2em;
+  position: relative;
 
-   .video{
-    z-index: 1;
-   }
+  text-decoration: none;
+  text-transform: none;
+  transition: all 0.3s ease-in-out;
+  user-select: none;
+  font-size: 13px;
+}
 
-   /* boton de sonido */
+.fancy::before {
+  content: " ";
+  width: 1.5625rem;
+  height: 2px;
+  background: black;
+  top: 50%;
+  left: 1.5em;
+  position: absolute;
+  transform: translateY(-50%);
+  transform-origin: center;
+  transition: background 0.3s linear, width 0.3s linear;
+}
+
+.fancy .text {
+  font-size: 1.125em;
+  line-height: 1.33333em;
+  padding-left: 2em;
+  display: block;
+  text-align: left;
+  transition: all 0.3s ease-in-out;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: black;
+}
+
+.fancy .top-key {
+  height: 2px;
+  width: 1.5625rem;
+  top: -2px;
+  left: 0.625rem;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, left 0.3s ease-out;
+}
+
+.fancy .bottom-key-1 {
+  height: 2px;
+  width: 1.5625rem;
+  right: 1.875rem;
+  bottom: -2px;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.fancy .bottom-key-2 {
+  height: 2px;
+  width: 0.625rem;
+  right: 0.625rem;
+  bottom: -2px;
+  position: absolute;
+  background: #e8e8e8;
+  transition: width 0.5s ease-out, right 0.3s ease-out;
+}
+
+.fancy:hover {
+  color: white;
+  background: black;
+}
+
+.fancy:hover::before {
+  width: 0.9375rem;
+  background: white;
+}
+
+.fancy:hover .text {
+  color: #630ec5;
+  padding-left: 1.5em;
+}
+
+.fancy:hover .top-key {
+  left: -2px;
+  width: 0px;
+}
+
+.fancy:hover .bottom-key-1,
+.fancy:hover .bottom-key-2 {
+  right: 0;
+  width: 0;
+}
+
+.video {
+  z-index: 1;
+}
+
+/* boton de sonido */
 /* The switch - the box around the slider */
 .switch {
-    /* Variables */
-   --switch_width: 2em;
-   --switch_height: 1em;
-   --thumb_color: #3f097e;
-   --track_color: #3f097e;
-   --track_active_color: #630ec5;
-   --outline_color: #000;
-   font-size: 17px;
-   position: relative;
-   display: inline-block;
-   width: var(--switch_width);
-   height: var(--switch_height);
-   margin-top: 290px;
+  /* Variables */
+  z-index: 2;
+  --switch_width: 2em;
+  --switch_height: 1em;
+  --thumb_color: #3f097e;
+  --track_color: #3f097e;
+  --track_active_color: #630ec5;
+  --outline_color: #000;
+  font-size: 17px;
+  display: inline-block;
+  width: var(--switch_width);
+  height: var(--switch_height);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  bottom: 2%;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  box-sizing: border-box;
+  border: 2px solid var(--outline_color);
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--track_color);
+  transition: 0.15s;
+  border-radius: var(--switch_height);
+}
+
+.slider:before {
+  box-sizing: border-box;
+  position: absolute;
+  content: "";
+  height: var(--switch_height);
+  width: var(--switch_height);
+  border: 2px solid var(--outline_color);
+  border-radius: 100%;
+  left: -2px;
+  bottom: -2px;
+  background-color: var(--thumb_color);
+  transform: translateY(-0.2em);
+  box-shadow: 0 0.2em 0 var(--outline_color);
+  transition: 0.15s;
+}
+
+input:checked + .slider {
+  background-color: var(--track_active_color);
+}
+
+input:focus-visible + .slider {
+  box-shadow: 0 0 0 2px var(--track_active_color);
+}
+
+/* Raise thumb when hovered */
+input:hover + .slider:before {
+  transform: translateY(-0.3em);
+  box-shadow: 0 0.3em 0 var(--outline_color);
+}
+
+input:checked + .slider:before {
+  transform: translateX(calc(var(--switch_width) - var(--switch_height)))
+    translateY(-0.2em);
+}
+
+/* Raise thumb when hovered & checked */
+input:hover:checked + .slider:before {
+  transform: translateX(calc(var(--switch_width) - var(--switch_height)))
+    translateY(-0.3em);
+  box-shadow: 0 0.3em 0 var(--outline_color);
+}
+
+/* @media (max-width: 720px) {
+  .start {
+    margin-top: 70%;
+    width: 58%;
   }
   
-  /* Hide default HTML checkbox */
-  .switch input {
-   opacity: 0;
-   width: 0;
-   height: 0;
-  }
-  
-  /* The slider */
-  .slider {
-   box-sizing: border-box;
-   border: 2px solid var(--outline_color);
-   position: absolute;
-   cursor: pointer;
-   top: 0;
-   left: 0;
-   right: 0;
-   bottom: 0;
-   background-color: var(--track_color);
-   transition: .15s;
-   border-radius: var(--switch_height);
-  }
-  
-  .slider:before {
-   box-sizing: border-box;
-   position: absolute;
-   content: "";
-   height: var(--switch_height);
-   width: var(--switch_height);
-   border: 2px solid var(--outline_color);
-   border-radius: 100%;
-   left: -2px;
-   bottom: -2px;
-   background-color: var(--thumb_color);
-   transform: translateY(-0.2em);
-   box-shadow: 0 0.2em 0 var(--outline_color);
-   transition: .15s;
-  }
-  
-  input:checked + .slider {
-   background-color: var(--track_active_color);
-  }
-  
-  input:focus-visible + .slider {
-   box-shadow: 0 0 0 2px var(--track_active_color);
-  }
-  
-  /* Raise thumb when hovered */
-  input:hover + .slider:before {
-   transform: translateY(-0.3em);
-   box-shadow: 0 0.3em 0 var(--outline_color);
-  }
-  
-  input:checked + .slider:before {
-   transform: translateX(calc(var(--switch_width) - var(--switch_height))) translateY(-0.2em);
-  }
-  
-  /* Raise thumb when hovered & checked */
-  input:hover:checked + .slider:before {
-   transform: translateX(calc(var(--switch_width) - var(--switch_height))) translateY(-0.3em);
-   box-shadow: 0 0.3em 0 var(--outline_color);
-  }
-   
+} ; */
