--- a/src/Pages/Details/Details.css
+++ b/src/Pages/Details/Details.css
@@ -127,3 +127,9 @@ margin-bottom: 20000px;
 margin-top: -30px;
 margin-left: -30px;
  }
+
+ @media ( max-width:1210px){
+  .letra{
+    display: table-header-group;
+  }
+ }
